test/tests/compiler/18_structures/invalid_parse/plx1_struct_decl_with_semicolon.plx
type struc s1(x: i32, y: i32);

pub fn main(none) i32 {
    return 0
}
